--- a/index.html
+++ b/index.html
@@ -12,10 +12,110 @@
             crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/src/menu.css">
-    <link rel="stylesheet" href="/src/typer.css">
-    <link rel="stylesheet" href="/src/keyboard.css">
+    <style>
+#punctuations, #numbers, .time-option, .word-option{
+    cursor: pointer;
+}
+
+#mistakes{
+    display: none;
+}
+
+#punctuations, #numbers{
+    display: none;
+}
+</style>
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
+#typer{
+    line-height: 35px;
+    outline: 0;
+}
+#typer:focus #words{
+    filter: blur(0);
+}
+
+#words{
+    font-family: 'Roboto Mono', monospace;
+    filter: blur(5px);
+    color: dimgrey;
+}
+
+.word{
+    display: inline-block;
+    margin: 0 5px;
+}
+
+.letter.correct{
+    color: var(--bs-white);
+}
+
+.letter.incorrect{
+    color: var(--bs-danger);
+}
+
+@keyframes blink {
+    0%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+#cursor{
+    display: none;
+    width: 2px;
+    height: 1.3rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: blink .8s infinite;
+}
+#typer:focus #cursor{
+    display: block;
+}
+#typer:not(:focus) #cursor{
+    display: none;
+}
+
+#typer.over #words{
+    opacity: .5;
+    filter: blur(0px);
+}
+
+#typer.over:focus #cursor{
+    display: none;
+}
+</style>
+    <style>
+.key{
+    box-shadow: 0px -6px 10px rgb(35, 50, 52), 0px 4px 15px rgb(37, 47, 49);
+    transition: 0.5s;
+    height: 2.5em;
+    font-size: 1em;
+    width: 3em;
+    margin: 0.3em;
+    background-color: #191a1c;
+    border-radius: 0.5em;
+    line-height: 2.5em;
+    letter-spacing: 1px;
+    text-align: center;
+
+}
+.key:hover {
+    box-shadow: 0 2px 0 rgba(0, 90, 225, 0.15);
+    cursor: pointer;
+    top: 3px;
+}
+
+#tab{
+    width : 10em;
+}
+</style>
 </head>
 <body>
 <header>
@@ -160,6 +260,250 @@
     </div>
 </footer>
 
-<script type="module" src="/src/main.js"></script>
+<script type="module">
+export let menu =
+{
+    punctuations : false,
+    numbers : false,
+    time : 30,
+    word : 50
+}
+$('#punctuations').click(function() {
+    menu.punctuations = !menu.punctuations;
+    $(this).toggleClass('text-success', menu.punctuations);
+});
+
+$('#numbers').click(function() {
+    menu.numbers = !menu.numbers;
+    $(this).toggleClass('text-success', menu.numbers);
+});
+
+$('.time-option').click(function() {
+    menu.time = parseInt($(this).data('time'));
+    $('.time-option').removeClass('text-success');
+    $(this).addClass('text-success');
+});
+
+$('.word-option').click(function() {
+    menu.word = parseInt($(this).data('word'));
+    $('.word-option').removeClass('text-success');
+    $(this).addClass('text-success');
+});
+
+const words = 'in one good real one not school set they state high life consider on and not come what also for set point can want as while with of order child about school thing never hold find order each too between program work end you home place around while place problem end begin interest while public or where see time those increase interest be give end think seem small as both another a child same eye you between way do who into again good fact than under very head become real possible some write know however late each that with because that place nation only for each change form consider we would interest with world so order or run more open that large write turn never over open each over change still old take hold need give by consider line only leave while what set up number part feel word right again how about system such between late want fact up problem stand new say move a lead small however large public out by eye here over so be way use like say people work for since interest so face order school good not most run problem group run she late other problem ... [truncated]';
+const words_list = words.split(' ');
+const wordsCount = words_list.length;
+const gameTime = menu.time * 1000;
+window.timer = null;
+window.gameStart = null;
+
+function addClass(el, name) {
+    el.className += ' ' + name;
+}
+
+function removeClass(el, name) {
+    el.className = el.className.replace(name, '');
+}
+
+function randomWord() {
+    const randomIndex = Math.floor(Math.random() * wordsCount);
+    return words_list[randomIndex];
+}
+
+function formatWord(word) {
+    return `<div class="word"><span class="letter">${word.split('').join('</span><span class="letter">')}</span></div>`;
+}
+
+function newTest() {
+    document.getElementById('words').innerHTML = '';
+    for (let i = 0; i < menu.word; i++) {
+        document.getElementById('words').innerHTML += formatWord(randomWord());
+    }
+    addClass(document.querySelector('.word'), 'current');
+    addClass(document.querySelector('.letter'), 'current');
+
+    window.timer = null;
+    window.gameStart = null;
+}
+
+function getWpm() {
+    const words = [...document.querySelectorAll('.word')];
+    const lastTypedWord = document.querySelector('.word.current');
+    const lastTypedWordIndex = words.indexOf(lastTypedWord) + 1;
+    const typedWords = words.slice(0, lastTypedWordIndex);
+    const correctWords = typedWords.filter(word => {
+        const letters = [...word.children];
+        const incorrectLetters = letters.filter(letter => letter.className.includes('incorrect'));
+        const correctLetters = letters.filter(letter => letter.className.includes('correct'));
+        return incorrectLetters.length === 0 && correctLetters.length === letters.length;
+    });
+    const timePassed = (new Date().getTime() - window.gameStart) / 60000;
+    return correctWords.length / timePassed;
+}
+let isOver = false;
+function testOver() {
+    isOver = true;
+    clearInterval(window.timer);
+    addClass(document.getElementById('typer'), 'over');
+    addClass(document.getElementById('words'), 'opacity-25')
+    const wpm = getWpm();
+    document.getElementById('speed-info').innerHTML = `${Math.round(wpm)}` + '';
+}
+
+document.getElementById('typer').addEventListener('keyup', event => {
+    if(isOver) return;
+    const key = event.key;
+    const currentWord = document.querySelector('.word.current');
+    const currentLetter = document.querySelector('.letter.current');
+    const expected = currentLetter?.innerHTML || ' ';
+    const isLetter = key.length === 1 && key !== ' ';
+    const isSpace = key === ' ';
+    const isBackspace = key === 'Backspace';
+    const isFirstLetter = currentLetter === currentWord.firstChild;
+
+    if (document.querySelector('#typer.over')) {
+        return;
+    }
+
+    if (!window.timer && isLetter) {
+        window.timer = setInterval(() => {
+            if (!window.gameStart) {
+                window.gameStart = (new Date()).getTime();
+            }
+            const currentTime = (new Date()).getTime();
+            const msPassed = currentTime - window.gameStart;
+            const sPassed = Math.round(msPassed / 1000);
+            const sLeft = Math.round((gameTime / 1000) - sPassed);
+            if (sLeft === 0) {
+                document.getElementById('timer-info').innerHTML = 0 + '';
+            }
+            if (sLeft <= 0) {
+                testOver();
+                return;
+            }
+            document.getElementById('timer-info').innerHTML = sLeft + '';
+        }, 1000);
+    }
+
+    console.log({ key, expected });
+
+    
+
+    if (isLetter) {
+        if (currentLetter) {
+            addClass(currentLetter, key === expected ? 'correct' : 'incorrect');
+            removeClass(currentLetter, 'current');
+            if (currentLetter.nextSibling) {
+                addClass(currentLetter.nextSibling, 'current');
+            }
+        } else {
+            const incorrectLetter = document.createElement('span');
+            incorrectLetter.innerHTML = key;
+            incorrectLetter.className = 'letter incorrect extra';
+            currentWord.appendChild(incorrectLetter);
+        }
+    }
+
+    if (isSpace) {
+        if (expected !== ' ') {
+            const lettersToInvalidate = [...document.querySelectorAll('.word.current .letter:not(.correct)')];
+            lettersToInvalidate.forEach(letter => {
+                addClass(letter, 'incorrect');
+            })
+        }
+        removeClass(currentWord, 'current');
+        addClass(currentWord.nextSibling, 'current');
+        if (currentLetter) {
+            removeClass(currentLetter, 'current');
+        }
+        addClass(currentWord.nextSibling.firstChild, 'current');
+    }
+
+    if (isBackspace) {
+        if (currentLetter) {
+            if (currentLetter && !isFirstLetter) {
+                // move back one letter, invalidate letter
+                removeClass(currentLetter, 'current');
+                addClass(currentLetter.previousSibling, 'current');
+                removeClass(currentLetter.previousSibling, 'incorrect');
+                removeClass(currentLetter.previousSibling, 'correct');
+            }
+        } else {
+            if (currentWord.lastChild.classList.contains('extra')) {
+                currentWord.removeChild(currentWord.lastChild)
+            } else if (currentWord.previousSibling) {
+                // make prev word current, last letter current
+                removeClass(currentWord, 'current');
+                addClass(currentWord.previousSibling, 'current');
+                const prevWord = currentWord.previousSibling;
+                if (prevWord.lastChild) {
+                    addClass(prevWord.lastChild, 'current');
+                    removeClass(prevWord.lastChild, 'incorrect');
+                    removeClass(prevWord.lastChild, 'correct');
+                }
+            }
+        }
+    }
+
+    // move cursor
+    const nextLetter = document.querySelector('.letter.current')
+    const nextWord = document.querySelector('.word.current');
+    const cursor = document.getElementById('cursor');
+    cursor.style.top = (nextLetter || nextWord).getBoundingClientRect().top + 'px';
+    cursor.style.left = (nextLetter || nextWord).getBoundingClientRect()[nextLetter ? 'left' : 'right'] + 'px';
+})
+
+function tryAgain() {
+    removeClass(document.getElementById('typer'), 'over');
+    removeClass(document.getElementById('words'), 'opacity-25');
+    newTest();
+}
+
+newTest();
+
+function escapeSelector(s) {
+    return s.replace( /(:|\.|\ \[|\]|,|=)/g, "\\$1" );
+}
+
+$(document).on("keydown",function (event){
+    console.log(event.key);
+
+    if(
+        event.key === '=' ||
+        event.key === '[' ||
+        event.key === ']' ||
+        event.key === ';' ||
+        event.key === ',' ||
+        event.key === '.' ||
+        event.key === '/'
+    ){
+        var a = escapeSelector(event.key)
+        $("#"+ a).css('background-color','#157347');
+        setTimeout(function (){
+            $("#"+a).css('background-color','#191a1c');
+        },400);
+    }else if(event.key === '\''){ 
+        $('#single-quotes').css('background-color','#157347');
+        setTimeout(function (){
+            $('#single-quotes').css('background-color','#191a1c');
+        },400);
+    }else if(event.key === '\\'){ 
+        $('#back-slash').css('background-color','#157347');
+        setTimeout(function (){
+            $('#back-slash').css('background-color','#191a1c');
+        },400);
+    }else if(event.which === 32){
+        $('#spacebar').css('background-color','#157347');
+        setTimeout(function (){
+            $('#spacebar').css('background-color','#191a1c');
+        },400);
+    }else{
+        $("#"+event.key).css('background-color','#157347');
+        setTimeout(function (){
+            $("#"+event.key).css('background-color','#191a1c');
+        },400);
+    }
+});
+</script>
 </body>
 </html>
